--- a/env.example
+++ b/env.example
@@ -3,12 +3,15 @@ EMAIL=""
 PASS=""
 
 # Slack
+SLACK_MESSAGING="YES"
 REQUESTS_SLACK_CHANNEL_NAME=""
 RESPONSE_SLACK_CHANNEL_NAME=""
 MAIN_SLACK_CHANNEL_NAME=""
 SLACK_APP_SECRET=""
 
 # Google Sheets
-TRACKING_SHEET_NAME=""
 SPREADSHEET_ID=""
+REQ_SHEET_NAME=""
+BID_SHEET_NAME=""
+LEADS_SHEET_NAME=""
 SERVICE_ACCOUNT_CREDENTIALS=''
