--- a/env.example
+++ b/env.example
@@ -1,15 +1,16 @@
+# For production deployment
 # Bubble_io Data
-EMAIL=""
+EMAIL=
 PASS=""
 
-# Slack
+# Slack Configration
 SLACK_MESSAGING="YES"
 REQUESTS_SLACK_CHANNEL_NAME=""
 RESPONSE_SLACK_CHANNEL_NAME=""
 MAIN_SLACK_CHANNEL_NAME=""
 SLACK_APP_SECRET=""
 
-# Google Sheets
+# Google Sheets Configration
 SPREADSHEET_ID=""
 REQ_SHEET_NAME=""
 BID_SHEET_NAME=""
